# neuro_cpp

./: CMakeLists.txt  CWidget.cpp  CWidget.h  ConnectLayers.cpp  ConnectLayers.h  ConvolutionalLayer.cpp  ConvolutionalLayer.h  MNIST_data.cpp  MNIST_data.h  README.md  doc_2023-12-06_23-55-55.clang-format  main.cpp  poolLayer.cpp  poolLayer.h
